--- a/asset/style.css
+++ b/asset/style.css
@@ -7,24 +7,51 @@ body {
     background-color: #f4f7fa;
     color: #333;
     line-height: 1.6;
+    
 }
-nav{
+nav {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    background-color:rgb(0, 152, 179);
-    padding: 20px;
-   
+    align-items: center;
+    background:rgb(0, 152, 179);
+    padding: 16px;
 }
-nav a{
+
+.nav-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+}
+
+.burger {
+    font-size: 24px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: white;
+    z-index: 1100; 
+    display: none;
+}
+
+.nav-links ul {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-links a {
     text-decoration: none;
     color: white;
-    font-size: 1.2rem;
-    font-weight: bold;
-  
-    text-align: center ;
-
+    white-space: nowrap;
 }
+
+
+
 h1 {
     text-align: center;
     margin: 20px 0;
@@ -408,9 +435,6 @@ form button{
     font-size: 1.8rem;
     margin-top: 20px;
 }
-
-
-
 .confirmation-details {
     max-width: 500px;
     margin: 0 auto
@@ -421,7 +445,6 @@ form button{
     background-color: #f9f9f9;
     list-style-type: none;
 }
-
 .confirmation-details li {
     margin-bottom: 10px;
 }
@@ -429,7 +452,7 @@ form button{
 
 
 
-/*admin */
+/*ADMIN */
 .btnAdmin{
     display: flex;
     flex-direction: column;
@@ -568,7 +591,7 @@ background-color: green;
 
 
 
-
+/* FOOTER */
 
 footer{
     display: flex;
@@ -581,3 +604,306 @@ footer{
 }
 
 
+
+
+
+
+
+/* Responsive */
+@media (max-width: 1000px) {
+    section{
+        max-width: 700px;
+    }
+    nav{
+        justify-content: space-between;
+    }
+    .burger {
+        display: block;
+    }
+    .nav-links {
+
+
+        position: fixed;
+        top: 0;
+        right: -250px; 
+        height: 100%;
+        background-color: #0099b0;
+        transition: right 0.3s ease;
+        padding: 60px 20px 20px;
+        z-index: 1000;
+    }
+    .nav-links.active {
+        right: 0;
+    }
+    .nav-links ul {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+    .listeRdv{
+        max-width: 800px;
+    }
+
+    .tableRdv thead{
+        display: none;
+    }
+    .tableRdv,
+    .tableRdv tbody,
+    .tableRdv tr,
+    .tableRdv td {
+        display: block;
+        width: 100%;
+    }
+    .tableRdv tr {
+        border: 1px solid #ccc;
+        padding: 0px;
+        border-radius: 8px;
+        background-color: #f9f9f9;
+        margin-bottom: 10px;
+    }
+    .tableRdv td {
+        text-align: center;
+        padding: 0;
+        position: relative;
+    }
+   
+}
+@media (max-width:850px){
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+ 
+ 
+    .tableUtilisateurs thead {
+        display: none; 
+        }
+        
+    .tableUtilisateurs, 
+    .tableUtilisateurs tbody, 
+    .tableUtilisateurs tr, 
+    .tableUtilisateurs td {
+        display: block;
+        width: 100%;
+    }
+        
+    .tableUtilisateurs tr {
+           
+        border: 1px solid #ccc;
+        padding: 0px;
+        border-radius: 8px;
+        background-color: #f9f9f9;
+        margin-bottom: 10px;
+    }
+        
+    .tableUtilisateurs td {
+        text-align: center;
+        padding: 0;
+        position: relative;
+    }
+    .btnAdmin{
+        display: flex !important;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .btn-modifier, .btn-supprimer{
+        padding: 5px;
+    }
+        
+
+        
+}
+
+@media (max-width:700px){
+    section{
+        max-width: 550px;
+    }
+  .tableServices,
+  .tableServices thead,
+  .tableServices tbody,
+  .tableServices th,
+  .tableServices td,
+  .tableServices tr {
+    display: block;
+   
+  }
+
+  .tableServices thead {
+    display: none;
+  }
+
+  .tableServices tr {
+    margin-bottom: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+  }
+
+  .tableServices td {
+    position: relative;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    box-sizing: border-box;
+  }
+  .tableServices a {
+    display: inline-block;
+    margin-right: 10px;
+    margin-top: 5px;
+  }
+  td a.btn-modifier,
+  td a.btn-supprimer {
+    display: block;
+    width: 100%;
+    margin: 5px 0;
+    text-align: center;
+  }
+  
+
+}
+@media (max-width: 600px) {
+    section{
+        max-width: 450px;
+    }
+
+}
+@media (max-width : 520px){
+    section{
+        max-width: 400px;
+    }
+    .form-container {
+        max-width: 400px;
+    }
+    .infoAdmin{
+        flex-direction: column;
+    }
+    .actions {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center; 
+    }
+    .table-rendezvous {
+        display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+      }
+    
+      .table-rendezvous table, 
+      .table-rendezvous thead, 
+      .table-rendezvous tbody, 
+      .table-rendezvous th, 
+      .table-rendezvous td, 
+      .table-rendezvous tr {
+        display: block;
+      }
+    
+      .table-rendezvous thead {
+        display: none; 
+      }
+    
+      .table-rendezvous tr {
+        margin-bottom: 15px;
+        border: 1px solid #ccc;
+        padding: 10px;
+        border-radius: 8px;
+        background-color: #f9f9f9;
+      }
+    
+      .table-rendezvous td {
+        text-align: center;
+        padding: 8px;
+        position: relative;
+      }
+    
+
+}
+@media (max-width: 400px){
+    section{
+        max-width: 300px;
+    }
+    .modifHoraire {
+        flex-direction: column;
+        padding: 10px;
+      }
+    
+      .modifHoraire table,
+      .modifHoraire thead,
+      .modifHoraire tbody,
+      .modifHoraire th,
+      .modifHoraire td,
+      .modifHoraire tr {
+        display: block;
+        width: 100%;
+      }
+    
+      .modifHoraire thead {
+        display: none; 
+      }
+    
+      .modifHoraire tr {
+        margin-bottom: 20px;
+        
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        background-color: #f9f9f9;
+      }
+    
+      .modifHoraire td {
+        position: relative;        
+        text-align: center;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        box-sizing: border-box;
+      }
+    
+     
+    
+      .modifHoraire input[type="time"],
+      .modifHoraire input[type="checkbox"],
+      .modifHoraire label {
+        width: 100%;
+        box-sizing: border-box;
+        margin-top: 5px;
+      }
+    
+      .modifHoraire input[type="submit"] {
+        width: 100%;
+        margin: 20px 0;
+      }
+      .checkbox{
+        display: flex !important;
+      }
+    
+
+
+    .form-container {
+        max-width: 250px;
+    }
+    .btnAdmin{
+        flex-direction: column;
+        margin-top: 5px;
+    }
+    .modif{
+        padding: 3px 10px !important;
+    }
+    .supp{
+        margin-top: 4px;
+        padding: 5px !important;
+
+    }
+}
+@media (max-width: 350px) {
+  section{
+    max-width: 250px;
+  }
+  .services a{
+    font-size: 0.85rem;
+
+  }
+}
